--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,17 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
-pillow = "*"
+gunicorn = "==20.1.0"
+django-heroku = "==0.3.1"
+asgiref = "==3.4.1"
+dj-database-url = "==0.5.0"
+psycopg2 = "==2.9.2"
+python-decouple = "==3.5"
+pytz = "==2021.3"
+sqlparse = "==0.4.2"
+whitenoise = "==5.3.0"
+Django = "==3.2.9"
+Pillow = "==8.4.0"
 
 [dev-packages]
 
